
	* bin/Makefile.am: Drop prep_gnu_info.sh.
	* bin/cygport.in (__prepetc): Ditto.
	(__prepinfo): Replaces prep_gnu_info.sh w/o postinstall.
	(__src_postinst): Call it.

	* lib/gst-plugins0.10.cygclass: Add pulse to gst-plugins-good.
	Update for gst-plugins-bad 0.10.8.

	* bin/cygport.in (__src_prep): Use rsync to copy origsrc/ to src/.
	* CYGWIN-PATCHES/*: Add rsync dependency.

	* bin/cygport.in (cygautoreconf): Accept ACLOCAL_FLAGS.
	(__prep_symlinks): Added to check for symlinks after install.
	(__src_postinst): Call it.

	* CYGWIN-PATCHES/README:
	* lib/Makefile.am: 
	* lib/apache1.cygclass: Added for apache-1.x only.
	* lib/apache2.cygclass: Added for apache-2.x only.
	* lib/apache.cygclass: Now a wrapper for apache1 and apache2.

	* lib/git.cygclass (git_fetch): Accept GIT_TAG, GIT_BRANCH, GIT_REV.

	* Makefile.am (SUBDIRS): Change test to tests.
	* configure.ac (AC_CONFIG_FILES): Ditto.
	* test/*: Moved to tests/*.

	* bin/cygport.in (__pkg_diff): Trim diff command lines from patches.

	* lib/qt4-qmake.cygclass (qt4_qmake_install):
	Fix location of pkg-config files after install.

	* bin/cygport.in (__src_prep): Remove DISTCLEANFILES after unpack.
	(cygcmake) 

	* lib/kde4.cygclass (kde4_compile): Define SVN_URI.
	Handle DO_NOT_COMPILE by passing appropriate options to cmake.
	Pass additional Qt4- and KDE4-specific options to cmake.
	(kde4_install): Delete kdeinit4 implibs.

	* lib/qt4.cygclass: Define QT4_RCC and QT4_UIC3.
	* lib/qt4-cmake.cygclass: Pass Qt4-specific options to cmake.

	* lib/R.cygclass (R_install): Use cp -LR to avoid dangling symlinks.

	* lib/ruby-gnome2.cygclass (ruby_gnome2_install):
	Do not rely on extconf.rb to determine implib name.

	* CYGWIN-PATCHES/README:
	* lib/Makefile.am:
	* lib/kde4.cygclass: New cygclass for KDE4 packages (in progress).

	* lib/ruby-gnome2.cygclass: Refactored for 0.17.0-rc1.

	* lib/qt3.cygclass: Prefer QT3_* constant naming to not clash with Qt4.
	(cygqmake3): New name for qt3_qmake, latter is deprecated.